@@ -395,13 +395,19 @@ simulateModel(modelInstance, startTime={start_time}, stopTime={stop_time}, metho
         import os
         from buildingspy.io.outputfile import get_errors_and_warnings
         path_to_logfile = os.path.join(worDir, 'simulator.log')
-        ret = get_errors_and_warnings(path_to_logfile, 'dymola')
-        if not ret["errors"]:
-            pass
+        # `simulator.log` may not exist in case of process timeout.
+        if os.path.exists(path_to_logfile):
+            ret = get_errors_and_warnings(path_to_logfile, 'dymola')
+            if not ret["errors"]:
+                pass
+            else:
+                for li in ret["errors"]:
+                    self._reporter.writeError(li)
+                raise IOError
         else:
-            for li in ret["errors"]:
-                self._reporter.writeError(li)
-            raise IOError
+            em = f"Log file {path_to_logfile} does not exist."
+            self._reporter.writeError(em)
+            raise IOError(em)
 
 # Classes that are inherited. These are listed here
 # so that they appear in the documentation.
