@@ -224,7 +224,7 @@ class Simulator(bs._BaseSimulator):
                     't1') is not None else 'mod.get_default_experiment_stop_time()',
                 result_file_name=f"{self._simulator_.get('resultFile')}.mat",
                 simulate=simulate,
-                time_out=-1,  # timeout is handled by BuildingsPy directly and not by the generated script
+                time_out=self._simulator_.get('timeout'),
                 filter=self._result_filter,
                 generate_html_diagnostics=self._generate_html_diagnostics,
                 debug_solver=self._debug_solver,
