@@ -4,6 +4,10 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- Corrected timeout handling in buildingspy.simulate.base_simulator.py
+  (https://github.com/lbl-srg/BuildingsPy/issues/385)
+- Corrected class name lookup mechanism in buildingspy.development.refactor.move_class()
+  (https://github.com/lbl-srg/BuildingsPy/issues/382)
 - For unit tests, added optional comment that is printed if a model is excluded from
   the tests (https://github.com/lbl-srg/BuildingsPy/issues/389)
 - Corrected generation of package.order for constant arrays (https://github.com/lbl-srg/BuildingsPy/issues/387)
